--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ resume_title:                   "Backend Developer"
 resume_contact_email:           "ajit07kumar03@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_contact_telephone:       "+918987854458"
+resume_contact_address:         "IN"
 
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
